# dndsandbox-tts

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.cpu  LICENSE  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/dndsandbox_tts/: __init__.py  cache.py  config.py  logging.py  main.py
src/dndsandbox_tts/api/: __init__.py  routes.py
src/dndsandbox_tts/audio/: __init__.py  processor.py
src/dndsandbox_tts/engines/: __init__.py  bark.py  base.py  manager.py  registry.py
src/dndsandbox_tts/models/: __init__.py  schemas.py
tests/: __init__.py  test_api.py  test_audio.py  test_cache.py  test_engines.py  test_registry.py  test_schemas.py
