[project]
name = "dndsandbox-tts"
version = "0.1.0"
description = "Local TTS service compatible with OpenAI TTS API for dndsandbox"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "chinese-room-solutions" }]
requires-python = ">=3.11"
keywords = ["tts", "text-to-speech", "bark", "api", "openai-compatible"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
bark = [
    "bark @ git+https://github.com/suno-ai/bark.git",
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.scripts]
dndsandbox-tts = "dndsandbox_tts.main:cli"

[project.urls]
Homepage = "https://github.com/chinese-room-solutions/dndsandbox-tts"
Repository = "https://github.com/chinese-room-solutions/dndsandbox-tts"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dndsandbox_tts"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
